test/errors/asWithExcept.compopts
--detailed-errors # asWithExcept-detailed.good
--no-detailed-errors # asWithExcept-brief.good
